feat: implement validation

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -26,5 +26,18 @@
   "editor-page.response": "Ответ",
   "editor-page.query": "Запрос",
   "editor-page.docs": "Документация",
-  "editor-page.docs-short": "Дока"
+  "editor-page.docs-short": "Дока",
+  "email.required": "Поле не может быть пустым",
+  "email.invalid": "Электронная почта недействительна",
+  "email.length": "Электронная почта должна быть длиннее 8 символов",
+  "email.digit": "Электронная почта должна содержать хотя бы одну цифру",
+  "pswd.length": "Пароль должен быть длиннее 8 символов",
+  "pswd.required": "Поле не может быть пустым",
+  "pswd.digit": "Пароль должен содержать хотя бы одну цифру",
+  "pswd.letter": "Пароль должен содержать хотя бы одну букву",
+  "pswd.char": "Пароль должен содержать хотя бы один специальный символ",
+  "user.not.found": "Проверьте свой адрес электронной почты или пароль",
+  "wrong.pswd": "Проверьте свой адрес электронной почты или пароль",
+  "exist.email": "Этот электронный адрес уже занят",
+  "some.error": "Что-то пошло не так"
 }
