--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "about-app.title": "A query language for your API",
   "about-app.info": "GraphiQL is a query language for APIs and a runtime for fulfilling those queries with your existing data. GraphiQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools.",
-  "signIn" : "Sign In",
+  "signIn": "Sign In",
   "signUp": "Sign Up",
   "home": "Home",
   "logout": "Logout",
@@ -27,6 +27,19 @@
   "editor-page.query": "Query",
   "editor-page.docs": "Documentation",
   "editor-page.docs-short": "Docs",
+  "email.required": "Email is required",
+  "email.invalid": "Email is invalid",
+  "email.length": "Email must be more than 8 characters",
+  "email.digit": "Email must contain at least one digit",
+  "pswd.length": "Password must be more than 8 characters",
+  "pswd.required": "Password is required",
+  "pswd.digit": "Password must contain at least one digit",
+  "pswd.letter": "Password must contain at least one letter",
+  "pswd.char": "Password must contain at least  one special character",
+  "user.not.found": "Check your email address or password",
+  "wrong.pswd": "Check your email address or password",
+  "exist.email": "Email already in use",
+  "some.error": "Oops! Something go wrong",
   "editor-page.error-schema": "Error to fetch schema!",
   "error-boundary.title": "Error",
   "error-boundary.text": "To reload the page press the button.",
