--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -27,6 +27,19 @@
   "editor-page.query": "Запрос",
   "editor-page.docs": "Документация",
   "editor-page.docs-short": "Дока",
+  "email.required": "Поле не может быть пустым",
+  "email.invalid": "Электронная почта недействительна",
+  "email.length": "Электронная почта должна быть длиннее 8 символов",
+  "email.digit": "Электронная почта должна содержать хотя бы одну цифру",
+  "pswd.length": "Пароль должен быть длиннее 8 символов",
+  "pswd.required": "Поле не может быть пустым",
+  "pswd.digit": "Пароль должен содержать хотя бы одну цифру",
+  "pswd.letter": "Пароль должен содержать хотя бы одну букву",
+  "pswd.char": "Пароль должен содержать хотя бы один специальный символ",
+  "user.not.found": "Проверьте свой адрес электронной почты или пароль",
+  "wrong.pswd": "Проверьте свой адрес электронной почты или пароль",
+  "exist.email": "Этот электронный адрес уже занят",
+  "some.error": "Что-то пошло не так",
   "editor-page.error-schema": "Ошибка загрузки схемы!",
   "error-boundary.title": "Ошибка",
   "error-boundary.text": "Для перезагрузки страницы нажмите кнопку.",
