fix: editor error, add headers

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,6 +41,7 @@
   "some.error": "Oops! Something go wrong",
   "editor-page.error-schema": "Error to fetch schema!",
   "editor-page.docs-loading": "Loading Docs",
+  "editor-page.headers": "Headers",
   "error-boundary.title": "Error",
   "error-boundary.text": "To reload the page press the button.",
   "error-boundary.button": "Reload"
