--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,7 @@
   "editor-page.query": "Query",
   "editor-page.docs": "Documentation",
   "editor-page.docs-short": "Docs",
+  "editor-page.query-error": "Please, check your query body.",
   "email.required": "Email is required",
   "email.invalid": "Email is invalid",
   "pswd.length": "Password must be more than 8 characters",
@@ -38,7 +39,7 @@
   "user.not.found": "Check your email address or password",
   "wrong.pswd": "Check your email address or password",
   "exist.email": "Email already in use",
-  "some.error": "Oops! Something go wrong",
+  "some.error": "Oops! Something went wrong",
   "editor-page.error-schema": "Error to fetch schema!",
   "editor-page.docs-loading": "Loading Docs",
   "editor-page.headers": "Headers",
